# banking-chatbot

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
domains/: banking.yaml  medical.yaml  template.yaml
src/pdf_generator/: __init__.py  __main__.py  cli.py  domain_manager.py  exceptions.py  models.py  pdf_renderer.py  template_engine.py  utils.py
tests/: __init__.py  conftest.py  test_domain_manager.py  test_models.py  test_pdf_renderer.py  test_template_engine.py  test_utils.py
tests/integration/: __init__.py  test_end_to_end.py
